<resources>
    <string name="app_name">Restaurant Dispatch</string>
    <string name="dispatch">Dispatch Order</string>
    <string name="restaurant_dispatch">Restaurant Dispatch</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="previous_orders">Previous orders</string>
    <string name="order_id">Order Id</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="dispatch_status">Dispatch Status</string>
    <string name="total">Total</string>
    <string name="country_code">Country Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="time_created">Time Created</string>
    <string name="time_updated">Time Updated</string>
    <string name="dispatch_order">Dispatch Order</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">price</string>
    <string name="size">Size</string>
    <string name="accompaniment">Accompaniment</string>
    <string name="description">Description</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="details">Details</string>
</resources>
