<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SingleOrder.SingleOrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        android:fontFamily="sans-serif"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".20"
        android:padding="20dp"
        android:src="@drawable/kilimanjaro_new_logo_crown" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight=".30"
        android:padding="3dp"
        app:cardCornerRadius="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/user_email"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/mobile_number"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvCreatedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/time_created"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvUpdatedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/time_updated"
                    android:textSize="20sp" />
            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".40"
        android:orientation="horizontal" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDispatch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight=".10"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_background"
        android:padding="5dp"
        android:text="@string/dispatch_order"
        android:textAllCaps="false" />

</LinearLayout>